# HBSIR_OLD

./: .gitignore  404.html  LICENSE  README.fa.md  README.md  conftest.py  hbsir_cli.py  index.html  mkdocs.yaml  new_tables.py  objects.inv  pyproject.toml  settings-sample.yaml  sitemap.xml
.github/workflows/: black.yml  docs.yml  tests.yml
api/: index.html
docs/: README.md  api.md  api.rst  conf.py  index.rst  requirements.txt
docs/tables/: README.md
docs/tables/cleaned/: README.md  census_month.md  cloth.md  communication.md  durable.md  education.md  employment_income.md  entertainment.md  food.md  furniture.md  home.md  hotel.md  house_specifications.md  household_information.md  investment.md  medical.md  members_properties.md  miscellaneous.md  old_agricultural_self_employed_income.md  old_non_agricultural_self_employed_income.md  old_other_income.md  old_rural_house_specifications.md  old_rural_private_employment_income.md  old_rural_public_employment_income.md  old_urban_house_specifications.md  old_urban_private_employment_income.md  old_urban_public_employment_income.md  other_income.md  self_employed_income.md  subsidy.md  tobacco.md  transportation.md
docs/tables/raw/: README.md  agricultural_self_employed_income.md  census_month.md  cloth.md  communication.md  durable.md  education.md  employment_income.md  entertainment.md  food.md  furniture.md  home.md  hotel.md  house_specifications.md  index.md  (+22 more)
examples/graphs/: __init__.py
hbsir/: __init__.py  api.py  archive_handler.py  autodoc.py  calculator.py  data_cleaner.py  data_engine.py  decoder.py  hbsframe.py  maintainer.py  map_drawer.py  metadata.py  metadata_reader.py  process.py  raw_data.py  utils.py
hbsir/calculator/: __init__.py  average.py  miscellaneous.py  quantile.py
hbsir/config/: default_settings.yaml  settings-sample.yaml
hbsir/core/: archive_handler.py  data_cleaner.py  data_engine.py  decoder.py  metadata_reader.py
hbsir/external_data/: __init__.py  cleaning_scripts.py  external_data_cleaner.py
hbsir/metadata/: _instruction.yaml  commodities.yaml  external_data.yaml  household.yaml  maps.yaml  occupations.yaml  other.yaml  schema.json  schema.yaml  tables.yaml
hbsir/schema_functions/: standard_tables.py  test.py
hbsir/utils/: __init__.py  argham.py  download_utils.py  metadata_utils.py  parsing_utils.py  seven_zip_utils.py
knowladge_base/abdi_maeda/: exploring_data.ipynb  table_functions.py
metadata/: commodities.yaml  commodity_codes.yaml  household.yaml  schema.yaml  tables.yaml
search/: search_index.json
tables/: index.html
tables/cleaned/: index.html
tables/raw/: index.html
tests/: conftest.py  test_data_engine.py  test_metadata_functions.py  test_package_structure.py  test_utils.py
tests/package/: test_by_examples.py
tests/test_metadata/: test_tables.py
tests/test_package/: test_data_engine.py  test_package_structure.py
tests/utils/: test_argham.py  test_metadata_utils.py
usage/: index.html
(+799 files in other folders)
