[tool.poetry]
name = "hbsir"
version = "0.3.0"
description = "An intuitive platform designed to simplify the analysis of Iran household budget survey data."
authors = [
    "Amin Alavian <m.amin.alavian@gmail.com>",
    "TerseTears <tersetears@protonmail.com>"
]
readme = "README.md"
repository = "https://github.com/Iran-Open-Data/HBSIR"
packages = [
    {include = "hbsir"}
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pyyaml = ">=6.0"
pathlib = ">=1.0"
numpy = ">=1.24"
pandas = ">=1.5"
pyodbc = ">=4.0"
requests = ">=2.28"
tqdm = ">=4.65"
pydantic = ">=2.1"
pyarrow = ">=11"

[tool.poetry.group.map.dependencies]
geopandas = "*"

[tool.poetry.group.maintain.dependencies]
boto3 = ">=1.28.28"


[tool.poetry.group.examples.dependencies]
jinja2 = ">=3.1"
pdf2image = ">=1.16"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2"
black = ">=23.7.0"
sphinx = "^7.2.6"
pydata-sphinx-theme = "^0.14.3"
numpydoc = "^1.6.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
